# kash-media

./: .copier-answers.yml  .gitignore  AGENTS.md  Makefile  README.md  development.md  publishing.md  pyproject.toml  skills-lock.json
.agents/skills/simple-modern-uv/: SKILL.md
.agents/skills/simple-modern-uv/references/: adopt-existing.md  customize.md  faq.md
.claude/skills/: simple-modern-uv  tbd
.codex/: ensure-gh-cli.sh  hooks.json  tbd-closing-reminder.sh  tbd-session.sh
.github/workflows/: ci.yml  github-release.yml  publish.yml
.tbd/: config.yml
.tbd/data-sync/issues/: is-01kxe8rb9vqaezk9akx1b7rcy0.md
.tbd/data-sync/mappings/: ids.yml
docs/: development.md  publishing.md
src/kash/kits/media/: __init__.py  transcription_context.py
src/kash/kits/media/actions/: __init__.py  add_description.py  add_summary_bullets.py  backfill_timestamps.py  break_into_paragraphs.py  caption_paras.py  create_pdf.py  describe_briefly.py  identify_speakers.py  insert_frame_captures.py  insert_section_headings.py  list_channel.py  remove_speaker_labels.py  transcribe.py  transcribe_annotate_summarize.py  transcribe_format.py
src/kash/kits/media/actions/concepts/: find_near_duplicates.py  identify_concepts.py  normalize_concept_list.py  save_concepts.py
src/kash/kits/media/actions/publish/: s3_upload.py
src/kash/kits/media/actions/text/: docx_to_html.py  docx_to_md.py  to_md_markitdown.py  to_md_pandoc.py
src/kash/kits/media/actions/transcribe/: backfill_timestamps.py  identify_speakers.py  insert_frame_captures.py  remove_speaker_labels.py  transcribe.py  transcribe_annotate.py  transcribe_format.py
src/kash/kits/media/docs/: docx_convert.py  markdown_footnotes.py  markitdown_custom_docx.py
src/kash/kits/media/libs/: __init__.py  concept_labels.py  concept_relations.py  pdf_output.py  yt_dlp_tools.py
src/kash/kits/media/libs/services/: apple_podcasts.py  vimeo.py  youtube.py
src/kash/kits/media/libs/wiki/: wiki_commands.py  wiki_entity_linking.py  wiki_search.py
src/kash/kits/media/media_services/: apple_podcasts.py  vimeo.py  youtube.py
src/kash/kits/media/tools/: __init__.py  image_similarity.py  media_preconditions.py  pdf_output.py  video_frames.py  video_gallery.py  yt_dlp_tools.py
src/kash/kits/media/tools/services/: apple_podcasts.py  vimeo.py  youtube.py
src/kash/kits/media/utils/: s3_utils.py  yt_dlp_tools.py
src/kash/kits/media/video/: image_similarity.py  speaker_labels.py  video_frames.py  video_gallery.py
src/kash/kits/media/wiki/: wiki_search.py
