# ---- Project Info and Dependencies ----

[project.urls]
Repository = "https://github.com/jlevy/kash-media"
# Homepage = "https://..."

[project]
name = "kash-media"
description = "The knowledge agent shell (media kit)"
authors = [
    { name="Joshua Levy", email="joshua@cal.berkeley.edu" },
]
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11,<4.0"
dynamic = ["version"]

dependencies = [
    "kash-shell @ git+ssh://git@github.com/jlevy/kash-shell.git@main",
    "typing-extensions>=4.11.1",
    # For printing. Note weasyprint has install dep issues on macos depending on the python version.
    # https://github.com/Kozea/WeasyPrint/issues/2112
    # https://github.com/Kozea/WeasyPrint/issues/1448
    "weasyprint>=63.1",
    # For downloading media:
    "yt-dlp>=2025.2.19",
    "curl-cffi>=0.7.4",
    # For screen capture and image processing:
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest>=8.3.4",
    "ruff>=0.4.10",
    "usort>=1.0.8.post1",
    "mypy>=1.15.0",
    "codespell>=2.4.1",
    "rich>=13.9.4",
]

[project.scripts]
# Entry point for this kit is the main shell, which will auto-detect
# and import from kash.kits.
kash-media = "kash.kits.media.__main__:main"


# ---- Build system ----

# Dynamic versioning from:
# https://github.com/ninoseki/uv-dynamic-versioning/

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.metadata]
# For referencing git+ssh urls in dependencies.
allow-direct-references = true

# Explicitly configure top-level namespace for hatch.
[tool.hatch.build.targets.wheel]
packages = ["src/kash"]

[tool.hatch.build.targets.wheel.sources]
"src/kash" = "kash"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = "true"


# ---- Settings ----

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E402", "E731", "E712"]

[tool.mypy]
disable_error_code = [
    "import-untyped",
]

[tool.codespell]
ignore-words-list = "iTerm,Numbe,caf"
# skip = "foo.py,bar.py"


[tool.pytest.ini_options]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = [
    "src",
    "tests",
]
norecursedirs = ["src/kash/xontrib"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:.*deprecated.*",
    "ignore:.*Deprecation.*",
    "ignore::RuntimeWarning:xonsh.tools",
    "ignore::SyntaxWarning:pydub.utils",
    "ignore::UserWarning:pydantic",
]
# Dev convenience: Temporarily rename a file to a stash pattern to stop tracking it.
addopts = "--ignore-glob='stash.*' --ignore-glob='*.stash.*'"

